# counting-in-cpp

./: .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  README.md  bibliography.bib  c++-book.tex  counting-in-c++.tex  html-preclean.sh  make4ht.cfg  makefile  style.css
benchmarks/constexpr/: count-11.cpp  count-98.cpp  run-benchmark.sh
cmake/modules/: UseLATEX.cmake
examples/anonymous-namespace/: foo-anonymous.cpp  foo.cpp  main-anonymous.cpp  main.cpp  sound_system-anonymous.cpp  sound_system.cpp
examples/constexpr/: constexpr-11.cpp  constexpr-14.cpp  constexpr-98.cpp
examples/extern-template/: bar-11.cpp  bar-98.cpp  factorial-11.cpp  factorial-11.hpp  factorial-98.hpp  foo-11.cpp  foo-98.cpp  main.cpp  some_template-11.cpp  some_template-11.hpp  some_template-98.hpp
examples/nullptr/: nullptr-11.cpp  nullptr-98.cpp
examples/reference-wrapper/: capacity_tracker.cpp
examples/static-assert/: even_sized_array-11.cpp  even_sized_array-98.cpp
examples/thread/: flood.cpp
examples/tuple/: binding.cpp
examples/type-traits/: main-11.cpp  main-98.cpp  mix-11.hpp  mix-98.hpp
examples/uniform-initialization/: struct.cpp
examples/variable-template/: main-11.cpp  main-14.cpp
examples/variadic-template/: callbacks.cpp  collect_type_names.cpp  dispatcher-11.hpp  dispatcher-98.hpp  dispatcher_impl.hpp  dispatcher_impl_0.hpp  dispatcher_impl_1.hpp  dispatcher_impl_2.hpp  main-11.cpp  main-98.cpp
figures/constexpr/: 11.data  98.data
html-cleanup/: CMakeLists.txt  main.cpp
parts/: 11.tex  14.tex  cpp-general.tex  license.tex  preface.tex  title-page.tex
parts/11/: anonymous-namespace.tex  array.tex  auto.tex  bind.tex  constexpr.tex  decltype.tex  defaulted-constructors.tex  delegated-constructors.tex  deleted-constructors.tex  extern-template.tex  free-begin.tex  function.tex  hash-table.tex  initializer-list.tex  lambdas.tex  miscellaneous.tex  move.tex  nullptr.tex  override-and-final.tex  prev-next.tex  random.tex  range-based-for-loops.tex  reference-wrapper.tex  rvalue-reference.tex  scoped-enumerations.tex  smart-pointers.tex  static-assert.tex  template-aliases.tex  thread.tex  tuple.tex  type-traits.tex  uniform-initialization.tex  using-parent-function.tex  variadic-template.tex
parts/14/: binary-literals.tex  decltype-auto.tex  deprecated.tex  exchange.tex  generic-lambdas.tex  integer-sequence.tex  lambda-capture.tex  make-unique.tex  number-separator.tex  relaxed-constexpr.tex  return-type-deduction.tex  tuple-addressing-by-type.tex  variable-templates.tex
style/: code-listings.tex
